// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createControllerInfoBlock > makes use of options 1`] = `
<div
  style="border-top: solid 1px $divider-color; font-size: 0.9em; padding: 0.5em 1.5em;"
>
  <span />
  <a
    href="https://test.com"
  />
  <span />
  <a
    href="https://test.com"
  />
  <span />
  <a
    href="https://solid.com/"
  />
  <span />
</div>
`;

exports[`createControllerInfoBlock > runs createControllerInfoBlock 1`] = `
<div
  style="border-top: solid 1px $divider-color; font-size: 0.9em; padding: 0.5em 1.5em;"
>
  <span />
  <a
    href="https://test.com"
  />
  <span />
  <a
    href="https://test.com"
  />
  <span />
  <a
    href="https://solidproject.org"
  />
  <span />
</div>
`;

exports[`rebuildFooter > creates a link 1`] = `
<div>
  <div
    style="border-top: solid 1px $divider-color; font-size: 0.9em; padding: 0.5em 1.5em;"
  >
    <span />
    <a
      href="https://test.com"
    />
    <span />
    <a
      href="https://test2.com"
    />
    <span />
    <a
      href="https://solid.com/"
    />
    <span />
  </div>
</div>
`;

exports[`rebuildFooter > does NOT creates a link in the footer 1`] = `
<div>
  <div
    style="border-top: solid 1px $divider-color; font-size: 0.9em; padding: 0.5em 1.5em;"
  >
    <span />
    <a
      href="https://test.com"
    />
    <span />
    <a
      href="https://test.com"
    />
    <span />
    <a
      href="https://solidproject.org"
    />
    <span />
  </div>
</div>
`;
